--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Feb 13 2022 23:32:00 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Feb 13 2022 23:56:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61ffedecb9a72905c27135fc" data-wf-site="61ffedecb9a7293d067135f4">
 <head>
   <meta charset="utf-8">
@@ -46,7 +46,7 @@ cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","pal
       <h1 data-ix="fade-in-bottom-page-loads" data-w-id="61078149-51f9-584c-010b-7f29d6e64d04" class="hero-heading">Looking to build your new web or mobile app?</h1>
       <div data-ix="fade-in-bottom-page-loads" data-w-id="978c720d-b1d2-3986-e125-b44eac974e48" class="hero-subheading">We build modern webapps with Bubble.io platform</div>
       <div data-ix="fade-in-bottom-page-loads" class="div-block-53">
-        <a href="https://calendly.com/ventero-intro/60min" target="_blank" class="button">Get a quote</a>
+        <a href="https://ventero.involve.me/request-a-free-consultation" target="_blank" class="button">Get a quote</a>
         <a href="#feature-section" class="hollow-button all-caps">Learn more</a>
       </div>
     </div>
@@ -130,18 +130,18 @@ cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","pal
         </div>
       </div>
     </div>
-    <a href="#" class="button">Get a quote</a>
+    <a href="https://ventero.involve.me/request-a-free-consultation" class="button">Get a quote</a>
   </div>
   <div class="technologies-we-use wf-section">
     <div class="w-container">
       <h1 class="heading-39">Technologies we use</h1>
-      <div data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71982" class="div-block-50"><img src="images/Daco_5017950.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71983" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.890625px, 169.1875px" alt="Bubble" srcset="images/Daco_5017950-p-500.png 500w, images/Daco_5017950-p-800.png 800w, images/Daco_5017950-p-1080.png 1080w, images/Daco_5017950-p-1600.png 1600w, images/Daco_5017950-p-2000.png 2000w, images/Daco_5017950.png 3541w" class="image-27 bubble"><img src="images/1280px-Airtable_Logo.svg.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71984" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.921875px, 169.1875px" alt="Airtable" srcset="images/1280px-Airtable_Logo.svg-p-500.png 500w, images/1280px-Airtable_Logo.svg-p-800.png 800w, images/1280px-Airtable_Logo.svg-p-1080.png 1080w, images/1280px-Airtable_Logo.svg.png 1280w" class="image-27 airtable"><img src="images/Shopify-Logo.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71985" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.9375px, 169.1875px" alt="Shopify" srcset="images/Shopify-Logo-p-500.png 500w, images/Shopify-Logo-p-800.png 800w, images/Shopify-Logo.png 3840w" class="image-27 shopify"><img src="images/58482a62cef1014c0b5e4a13.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71986" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.921875px, 169.1875px" alt="Webflow" srcset="images/58482a62cef1014c0b5e4a13-p-500.png 500w, images/58482a62cef1014c0b5e4a13-p-800.png 800w, images/58482a62cef1014c0b5e4a13-p-1080.png 1080w, images/58482a62cef1014c0b5e4a13.png 1801w" class="image-27 webflow"></div>
+      <div data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71982" class="div-block-50"><img src="images/Daco_5017950.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71983" sizes="(max-width: 479px) 72vw, (max-width: 767px) 23vw, (max-width: 991px) 167.421875px, 216.1875px" alt="Bubble" srcset="images/Daco_5017950-p-500.png 500w, images/Daco_5017950-p-800.png 800w, images/Daco_5017950-p-1080.png 1080w, images/Daco_5017950-p-1600.png 1600w, images/Daco_5017950-p-2000.png 2000w, images/Daco_5017950.png 3541w" class="image-27 bubble"><img src="images/1280px-Airtable_Logo.svg.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71984" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.921875px, 169.1875px" alt="Airtable" srcset="images/1280px-Airtable_Logo.svg-p-500.png 500w, images/1280px-Airtable_Logo.svg-p-800.png 800w, images/1280px-Airtable_Logo.svg-p-1080.png 1080w, images/1280px-Airtable_Logo.svg.png 1280w" class="image-27 airtable"><img src="images/Shopify-Logo.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71985" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.9375px, 169.1875px" alt="Shopify" srcset="images/Shopify-Logo-p-500.png 500w, images/Shopify-Logo-p-800.png 800w, images/Shopify-Logo.png 3840w" class="image-27 shopify"><img src="images/58482a62cef1014c0b5e4a13.png" loading="lazy" data-w-id="96e81d05-e1e5-f313-ad82-29ad2ff71986" sizes="(max-width: 479px) 72vw, (max-width: 767px) 23vw, (max-width: 991px) 167.40625px, 216.1875px" alt="Webflow" srcset="images/58482a62cef1014c0b5e4a13-p-500.png 500w, images/58482a62cef1014c0b5e4a13-p-800.png 800w, images/58482a62cef1014c0b5e4a13-p-1080.png 1080w, images/58482a62cef1014c0b5e4a13.png 1801w" class="image-27 webflow"></div>
     </div>
   </div>
   <div class="testimonials wf-section">
     <div data-w-id="9805e7d8-0494-3129-0081-428588c365cd" style="opacity:0" class="w-container">
       <h1 class="heading-39">Highly ranking services</h1>
-      <div class="div-block-50"><img src="images/main-qimg-44f33792dc31e0c3a20fe7b3670ed304.png" loading="lazy" data-w-id="9805e7d8-0494-3129-0081-428588c365d1" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.9375px, 169.1875px" alt="Upwork 5 starts" srcset="images/main-qimg-44f33792dc31e0c3a20fe7b3670ed304-p-500.png 500w, images/main-qimg-44f33792dc31e0c3a20fe7b3670ed304.png 602w" class="image-27 bubble"><img src="images/risingtalent.png" loading="lazy" data-w-id="9805e7d8-0494-3129-0081-428588c365d4" sizes="(max-width: 479px) 72vw, (max-width: 767px) 41vw, (max-width: 991px) 232.875px, 169.1875px" alt="rising talent" srcset="images/risingtalent-p-500.png 500w, images/risingtalent.png 1000w" class="image-27 webflow"></div>
+      <div class="div-block-50"><img src="images/main-qimg-44f33792dc31e0c3a20fe7b3670ed304.png" loading="lazy" data-w-id="9805e7d8-0494-3129-0081-428588c365d1" sizes="(max-width: 479px) 72vw, (max-width: 767px) 23vw, (max-width: 991px) 167.40625px, 216.1875px" alt="Upwork 5 starts" srcset="images/main-qimg-44f33792dc31e0c3a20fe7b3670ed304-p-500.png 500w, images/main-qimg-44f33792dc31e0c3a20fe7b3670ed304.png 602w" class="image-27 bubble"><img src="images/risingtalent.png" loading="lazy" data-w-id="9805e7d8-0494-3129-0081-428588c365d4" sizes="(max-width: 479px) 72vw, (max-width: 767px) 23vw, (max-width: 991px) 167.40625px, 216.1875px" alt="rising talent" srcset="images/risingtalent-p-500.png 500w, images/risingtalent.png 1000w" class="image-27 webflow"></div>
     </div>
   </div>
   <div class="our-services grey wf-section">
@@ -182,7 +182,7 @@ cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","pal
         </div>
       </div>
     </div>
-    <a href="#" class="button">Get a quote</a>
+    <a href="https://ventero.involve.me/request-a-free-consultation" target="_blank" class="button">Get a quote</a>
   </div>
   <div class="our-services accent wf-section">
     <div class="w-container">
@@ -263,7 +263,7 @@ cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","pal
     <div class="centered-container w-container">
       <h2 class="heading-45">Request a call back</h2>
       <p class="paragraph-28">Let&#x27;s discuss your project and see if we can help you to build and launch your app</p>
-      <a href="#" class="button-12 w-button">Free consultation</a>
+      <a href="https://ventero.involve.me/request-a-free-consultation" target="_blank" class="button-12 w-button">Free consultation</a>
     </div>
   </section>
   <div class="footer wf-section">
