--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Mar 27 2022 19:24:21 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 28 2022 23:57:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="623b882843f5f0277418f670" data-wf-site="61ffedecb9a7293d067135f4">
 <head>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Roboto:300,regular,500"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-2">
@@ -124,9 +124,9 @@
           </div>
           <div class="spc w-col w-col-4">
             <h5 class="heading-53">useful links</h5>
-            <a href="#" class="footer-link">Home</a>
-            <a href="#" class="footer-link">NoCode Development</a>
-            <a href="#" class="footer-link">Bookkeeping</a>
+            <a href="index.html" target="_blank" class="footer-link">Home</a>
+            <a href="nocode-dev.html" target="_blank" class="footer-link">NoCode Development</a>
+            <a href="bookkeeping.html" target="_blank" aria-current="page" class="footer-link w--current">Bookkeeping</a>
             <a href="#" id="GDPR" class="footer-link">Cookies and Privacy Policy</a>
           </div>
           <div class="column-3 w-col w-col-4">
